--- a/app/views/hotels/_form1.html.erb
+++ b/app/views/hotels/_form1.html.erb
@@ -1025,6 +1025,11 @@
     <%= f.text_area :policies,:class=>"form-control fixedtextarea",:rows=>"6"%>
 </div>
 <br>
+
+ images: 
+    <%= f.file_field :images, multiple: true %>
+
+
 <div class="col-sm-12 text-center"><button class="btn btn-success btn-md actions ">Update Hotel</button></div>
 
 </div>
